# autism-spectrum-disorders

./: .gitignore
data/processed/ArmFlapping/: 01.avi  02.avi  03.avi  04.avi  05.avi  06.avi  07.avi  08.avi  09.avi  10.avi  11.avi  12.avi  13.avi  14.avi  15.avi  16.avi  17.avi  18.avi  19.avi  20.avi  21.avi  22.avi  23.avi  24.avi  25.avi  26.avi  27.avi  28.avi  29.avi  30.avi  31.avi  32.avi  33.avi  34.avi  35.avi  36.avi  37.avi  38.avi  39.avi  40.avi  (+9 more)
data/processed/HeadBanging/: 01.avi  02.avi  03.avi  04.avi  05.avi  06.avi  07.avi  08.avi  09.avi  10.avi  11.avi  12.avi  13.avi  14.avi  15.avi  16.avi  17.avi  18.avi  19.avi  20.avi  21.avi  22.avi  23.avi  24.avi  25.avi  26.avi  27.avi  28.avi
data/processed/Spinning/: 01.avi  02.avi  03.avi  04.avi  05.avi  06.avi  08.avi  10.avi  11.avi  12.avi  13.avi  14.avi  15.avi  16.avi  17.avi  18.avi  19.avi  20.avi  21.avi  22.avi  23.avi  24.avi  25.avi  26.avi  27.avi
notebooks/: nb.ipynb
scripts/: clip_ssbd_videos.py  clip_ssbd_videos.sh  download_ssbd.py  download_ssbd.sh
tools/: CMakeLists.txt  clip_segment.cpp  clipping.cpp
